# ouvidoria

./: .gitignore  README.md  main.py  pyproject.toml
docs/: output.md  ouvidorias_fais.md  problema.md
output/: ouvidorias_fais_federais.csv  ouvidorias_fais_federais.xlsx
scratch/: backfill_cache.py  estaduais_dump.txt  scrape_test.py
src/: fais_data.py  gerar_planilha.py  scraper.py  scraper_fundacoes.py
